--- a/src/assets/scss/setup/_mixins.scss
+++ b/src/assets/scss/setup/_mixins.scss
@@ -35,9 +35,7 @@
 	background-image: linear-gradient(to right, $color1, $color2);
 
 	@include hover {
-		background-image: linear-gradient(to right,
-				lighten($color1, 8%),
-				lighten($color2, 8%));
+		box-shadow: 3px 3px white, 5px 5px $color1;
 	}
 }
 
