--- a/src/assets/scss/views/_home-page.scss
+++ b/src/assets/scss/views/_home-page.scss
@@ -1,16 +1,16 @@
 .home-page {
 
 	.home-header {
-		padding-inline: $desktop-padding;
+		padding-inline-start: 48px;
 		display: flex;
 		align-items: center;
 		height: 10vh;
 		position: sticky;
 		background-color: $bg-color;
 		top: 0px;
+		z-index: 50;
 
 		.header-wrapper {
-			max-width: $wide-breakpoint;
 			margin: auto;
 			display: flex;
 			align-items: center;
@@ -20,7 +20,7 @@
 			.logo {
 				.logo-title {
 					font-size: rem(36px);
-					font-weight: 800;
+					font-weight: 300;
 				}
 			}
 
@@ -29,35 +29,38 @@
 				justify-content: center;
 				align-items: center;
 				height: 45px;
-				width: 150px;
-				border-radius: 2em;
-				@include btn($primary-color, $secondary-color);
+				width: 180px;
+				@include btn($link-color, darken($link-color, 8%));
+
+
 
 				p {
 					display: flex;
 					gap: 12px;
 					justify-content: center;
 					align-items: center;
-					font-weight: 700;
 					font-size: rem(16px);
+					letter-spacing: 1px;
 					color: $txt-color;
+					text-transform: uppercase;
 				}
 
-				span{
-					svg{
-						fill: $txt-color;
-					}
+				@include hover {
+					box-shadow: none;
+					opacity: .8;
 				}
+
 			}
 		}
 	}
 
 	.home-content {
-		max-width: calc($inner-wide-breakpoint + 400px);
-		padding-inline: 48px;
-		margin: auto;
+		padding-top: 24px;
+		width: 100%;
+		justify-content: space-between;
 		display: grid;
-		gap: 48px;
+		column-gap: 48px;
+		grid-template-columns: 1fr 1fr;
 		grid-template-areas:
 			'text img'
 			'resumes img';
@@ -67,26 +70,35 @@
 			padding-block-start: 48px;
 
 			h1 {
+				padding-inline-start: 48px;
+				margin-inline-end: 72px;
 				line-height: 1;
-				font-weight: 800;
-				font-size: rem(36px);
+				font-size: rem(72px);
+				font-weight: 300;
 				margin-bottom: 16px;
+				text-transform: uppercase;
 				color: $primary-color;
 
 				span {
-					font-size: rem(60px);
+					color: $link-color;
 				}
 			}
 
 			p {
+				padding-inline: 48px;
+				width: fit-content;
 				font-size: rem(24px);
+				font-weight: 300;
+				background-image: linear-gradient(to right, $link-color, darken($link-color, 8%));
+				color: $txt-color;
+				padding-block: 16px;
 			}
 
 		}
 
 		.home-hero {
 			grid-area: img;
-			padding-block: 48px;
+			padding-block-start: 48px;
 			margin: auto;
 			display: flex;
 			gap: rem(72px);
@@ -96,16 +108,32 @@
 
 
 			.hero-img {
+				position: relative;
+
+				.rect {
+					position: absolute;
+					top: -40px;
+					left: -40px;
+					width: 80px;
+					height: 80px;
+					background-color: $link-color;
+					opacity: .8;
+				}
 
 				img {
 					width: 100%;
+					height: 70vh;
+					object-fit: cover;
 				}
 			}
 		}
 
 		.resume-list-container {
+			padding-inline-start: 48px;
+			margin-inline-end: 72px;
 			grid-area: resumes;
-			flex-basis: 50%;
+			margin-top: auto;
+
 
 			.resume-list-header {
 
@@ -124,16 +152,27 @@
 			.resume-list {
 				display: flex;
 				gap: 24px;
-				flex-direction: column;
+				overflow-x: auto;
+				max-width: 50vw;
+
+				&.overflow {
+					padding-bottom: 15px;
+				}
+
+				::-webkit-scrollbar {
+					display: block;
+				}
 
 				.resume-preview-add,
 				.resume-preview {
+
 					a {
 						display: flex;
 						align-items: center;
-						border-radius: 1em;
-						height: 80px;
+						height: 184px;
+						width: 184px;
 						padding-inline: 24px;
+						text-align: center;
 
 						.resume-info {
 							display: flex;
@@ -152,88 +191,83 @@
 				.resume-preview {
 					a {
 						padding-inline: 48px;
-						background-image: linear-gradient(to right, $primary-color, $secondary-color);
-						transition: .4s ease-in-out;
-					}
+						@include btn($link-color, darken($link-color, 8%));
 
-					@include hover {
-						a {
-							background-image: linear-gradient(to right, lighten($primary-color, 4%), lighten($secondary-color, 4%));
+						@include hover {
+							box-shadow: none;
+							opacity: .8;
 						}
 					}
+
 				}
 
 				.resume-preview-add {
+					z-index: 50;
+
 					a {
-						border: 1px dashed lighten($secondary-color, 50%);
+						display: flex;
+						align-items: center;
+						justify-content: center;
+						border: 1px dashed $link-color;
 
 						.resume-icon {
 							svg {
-								fill: $primary-color;
-								height: 40px;
-								width: 40px;
+								scale: 2;
+								fill: $link-color;
 							}
 						}
 
 						.resume-info {
+							display: flex;
+							flex-direction: column;
+
 							.resume-title {
-								color: $primary-color;
+								color: $link-color;
 							}
 						}
 					}
 
 					@include hover {
-						opacity: .8;
+						opacity: .9;
 					}
 				}
 			}
 		}
 
-	}
-
-	@include for-middle-layout {
-		.home-content {
-			padding-inline: $desktop-padding;
-			row-gap: 24px;
-			grid-template-areas:
-				'text img'
-				'resumes resumes';
-
-			.home-text {
-				align-self: center;
-			}
-
-			.home-hero {
-				padding-block-start: 24px;
-				padding-block-end: 0;
-
-				.hero-img {
-					img {
-						width: 90%;
-					}
-
-				}
-			}
-		}
 	}
 
 	@include for-narrow-layout {
 		.home-content {
-			padding-bottom: 48px;
+			padding: 0;
+			grid-template-columns: 1fr;
 			grid-template-areas:
 				'img'
 				'text'
 				'resumes';
 
-			.home-text {
-				text-align: center;
-				padding-top: 0;
+			.home-hero {
+				padding: 0;
+				width: 100%;
+
+				.hero-img {
+					width: 100%;
+
+					.rect {
+						display: none;
+					}
+
+					img {
+						height: 40vh;
+					}
+				}
 			}
 
-			.home-hero {
-				.hero-img {
-					display: flex;
-					justify-content: center;
+			.resume-list-container {
+				padding-block: 48px;
+
+				.resume-list {
+					max-width: 85vw;
+					overflow-x: auto;
 				}
 			}
 
@@ -241,27 +275,54 @@
 	}
 
 	@include for-mobile-layout {
+
+		.home-header {
+			padding: 12px;
+
+			.header-wrapper {
+				.login {
+					.login-btn {
+						width: 120px;
+					}
+				}
+			}
+		}
+
 		.home-content {
 			.home-text {
 				h1 {
-					font-size: rem(26px);
-
-					span {
-
-						font-size: rem(38px);
-					}
+					padding-inline: 12px;
 				}
 
 				p {
-					font-size: rem(18px);
-
+					padding-inline: 12px;
+					width: 100%;
 				}
 			}
 
 			.resume-list-container {
-				.resume-list-header {
-					h2 {
-						font-size: rem(26px);
+				margin: 0;
+				padding-inline: 12px;
+
+				.resume-list {
+					max-width: 100%;
+					flex-direction: column;
+
+					.resume-preview,
+					.resume-preview-add {
+						a {
+							width: 100%;
+							height: 80px;
+						}
+					}
+
+					.resume-preview-add{
+						a{
+							justify-content: flex-start;
+							.resume-info{
+									flex-direction: row;
+							}
+						}
 					}
 				}
 			}
