--- a/src/assets/scss/templates/_template-no1.scss
+++ b/src/assets/scss/templates/_template-no1.scss
@@ -238,4 +238,8 @@
             border-top: 2px solid $primary-color;
         }
     }
+
+    @include for-middle-layout {
+        height: unset;
+    }
 }
