--- a/src/assets/scss/components/_resume-customize.scss
+++ b/src/assets/scss/components/_resume-customize.scss
@@ -16,6 +16,7 @@
         .arrange-layout {
             .sub-title {
                 margin-bottom: 8px;
+
                 h2 {
                     font-size: rem(16px);
                     font-weight: 800;
@@ -27,7 +28,7 @@
                 display: flex;
                 flex-direction: column;
 
-                .component-preview   {
+                .component-preview {
                     height: 62px;
                 }
             }
@@ -246,6 +247,11 @@
 
             }
         }
+    }
+
+    @include for-narrow-layout {
+        padding-inline: 0;
+        margin-block-end: 48px;
     }
 }
 
