--- a/src/assets/scss/components/_resume-form.scss
+++ b/src/assets/scss/components/_resume-form.scss
@@ -8,7 +8,6 @@
         display: none;
     }
 
-
     .resume-header {
         z-index: 50;
         height: 120px;
@@ -94,8 +93,6 @@
 
     }
 
-
-
     .resume-form {
         margin-block: 24px;
         padding-block-end: 24px;
@@ -140,6 +137,10 @@
                 'email email phone phone'
                 'address address address address'
             ;
+
+            .file-label {
+                display: none;
+            }
 
             .resume-input {
                 label {
@@ -671,5 +672,91 @@
 
     }
 
+    @include for-middle-layout {
+        flex-basis: 100%;
+    }
 
+    @include for-narrow-layout {
+        padding-block-end: 48px;
+        padding-inline: 12px;
+
+        .resume-header {
+            justify-content: center;
+            padding-inline: 0;
+
+            .header-nav {
+                .content {
+                    a {
+                        &.router-link-exact-active {
+                            p {
+                                box-shadow: 0px 2px 0px -1px $primary-color;
+                            }
+                        }
+                    }
+                }
+            }
+
+            .download {
+                display: none;
+            }
+        }
+
+        .resume-form {
+            .resume-title {
+                padding-inline: 0;
+            }
+
+            >* {
+                padding-inline: 0 !important;
+            }
+
+            .resume-personal {
+                display: flex;
+                flex-direction: column;
+                grid-template-columns: 1fr;
+                gap: 0px;
+
+                .file-label {
+                    display: block;
+                    font-size: rem(16px);
+                    font-weight: 800;
+                }
+
+                .resume-input {
+                    margin-bottom: 24px;
+
+                    &.file-input {
+                        top: 8px;
+                        display: flex;
+                        position: relative;
+                        height: 80px;
+                        width: 80px;
+
+                    }
+                }
+            }
+
+            .resume-education,
+            .resume-experience,
+            .resume-military {
+                grid-template-columns: 1fr;
+            }
+
+            &.open {
+                padding-block-end: 0;
+                margin-block-end: 0;
+            }
+        }
+
+        .resume-footer {
+            padding: 0;
+            justify-content: space-between;
+
+            margin-bottom: 48px;
+
+            >* {
+                flex-basis: 45%;
+            }
+        }
+    }
 }
