--- a/src/assets/scss/components/_auth-form.scss
+++ b/src/assets/scss/components/_auth-form.scss
@@ -129,15 +129,15 @@
 	}
 
 	.form-submit {
-
 		margin: auto;
-		width: 220px;
+		margin-top: 24px;
+		// width: 220px;
+		width: 100%;
 		height: 60px;
-		border-radius: 2em;
 		font-weight: 700;
 		font-size: rem(16px);
 		color: $txt-color;
-		@include btn($brand-color, $secondary-brand-color);
+		@include btn($link-color, darken($link-color, 8%));
 	}
 
 
