--- a/src/assets/scss/components/_modal.scss
+++ b/src/assets/scss/components/_modal.scss
@@ -1,19 +1,20 @@
 .custom-modal {
 	.modal-overlay {
 		position: fixed;
-		z-index: $modal-overlay-z-index;
+		z-index: 100;
 		top: 0;
 		left: 0;
 		width: 100%;
 		height: 100%;
 		background-color: rgba(0, 0, 0, 0.7);
 		transition: opacity 0.3s ease;
+
 	}
 
 	.modal-content {
 		position: absolute;
 		width: $modal-width;
-		z-index: $modal-z-index;
+		z-index: 150;
 		left: 0;
 		right: 0;
 		top: 7.5vh;
