--- a/src/assets/scss/views/_home-page.scss
+++ b/src/assets/scss/views/_home-page.scss
@@ -92,6 +92,7 @@
 				background-image: linear-gradient(to right, $link-color, darken($link-color, 8%));
 				color: $txt-color;
 				padding-block: 16px;
+				line-height: 1.2;
 			}
 
 		}
@@ -165,65 +166,61 @@
 
 				.resume-preview-add,
 				.resume-preview {
+					cursor: pointer;
+					display: flex;
+					align-items: center;
+					height: 184px;
+					width: 184px;
+					padding-inline: 24px;
+					text-align: center;
 
-					a {
+					.resume-info {
 						display: flex;
+						gap: 12px;
 						align-items: center;
-						height: 184px;
-						width: 184px;
-						padding-inline: 24px;
-						text-align: center;
 
-						.resume-info {
-							display: flex;
-							gap: 12px;
-							align-items: center;
-
-							.resume-title {
-								font-size: rem(24px);
-								font-weight: 600;
-								color: $txt-color;
-							}
+						.resume-title {
+							font-size: rem(24px);
+							font-weight: 600;
+							color: $txt-color;
 						}
 					}
+
 				}
 
 				.resume-preview {
-					a {
-						padding-inline: 48px;
-						@include btn($link-color, darken($link-color, 8%));
+					font-weight: 500;
+					color: $txt-color;
+					font-size: rem(28px);
+					justify-content: center;
 
-						@include hover {
-							box-shadow: none;
-							opacity: .8;
-						}
+					@include btn($link-color, darken($link-color, 8%));
+
+					@include hover {
+						box-shadow: none;
+						opacity: .8;
 					}
 
 				}
 
 				.resume-preview-add {
 					z-index: 50;
+					justify-content: center;
+					border: 1px dashed $link-color;
 
-					a {
-						display: flex;
-						align-items: center;
-						justify-content: center;
-						border: 1px dashed $link-color;
-
-						.resume-icon {
-							svg {
-								scale: 2;
-								fill: $link-color;
-							}
+					.resume-icon {
+						svg {
+							scale: 2;
+							fill: $link-color;
 						}
+					}
 
-						.resume-info {
-							display: flex;
-							flex-direction: column;
+					.resume-info {
+						display: flex;
+						flex-direction: column;
 
-							.resume-title {
-								color: $link-color;
-							}
+						.resume-title {
+							color: $link-color;
 						}
 					}
 
@@ -310,18 +307,15 @@
 
 					.resume-preview,
 					.resume-preview-add {
-						a {
-							width: 100%;
-							height: 80px;
-						}
+						width: 100%;
+						height: 80px;
 					}
 
-					.resume-preview-add{
-						a{
-							justify-content: flex-start;
-							.resume-info{
-									flex-direction: row;
-							}
+					.resume-preview-add {
+						justify-content: flex-start;
+
+						.resume-info {
+							flex-direction: row;
 						}
 					}
 				}
