--- a/src/assets/scss/components/_user-msg.scss
+++ b/src/assets/scss/components/_user-msg.scss
@@ -24,7 +24,12 @@
         opacity: 1;
     }
 
-
+    @include for-mobile-layout{
+        left: 50%;
+        transform: translateX(-50%);
+        width: 90%;
+        justify-content: center;
+    }
 
 
 }
