--- a/src/assets/scss/components/_resume-form.scss
+++ b/src/assets/scss/components/_resume-form.scss
@@ -213,9 +213,6 @@
                     }
                 }
 
-                .black-screen {
-                    display: none;
-                }
                 .more-options {
                     display: none;
                     position: absolute;
@@ -256,6 +253,16 @@
                     .cancel-modal {
                         display: none;
                     }
+                }
+
+                .black-screen {
+                    width: 100%;
+                    height: 100vh;
+                    background-color: rgba(0, 0, 0, 0.493);
+                    position: fixed;
+                    top: 0;
+                    left: 0;
+                    z-index: 50;
                 }
 
                 @include hover {
@@ -657,7 +664,62 @@
                 }
             }
 
+            .remove-modal {
+                position: fixed;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                background-color: white;
+                z-index: 200;
+                padding: 36px !important;
+                width: 540px;
+                height: 230px;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
 
+                .modal-header {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: flex-start;
+                    gap: 6px;
+
+                    h1 {
+                        font-size: rem(22px);
+                        font-weight: 800;
+                    }
+                }
+
+                .actions {
+                    display: flex;
+                    justify-content: flex-end;
+                    gap: 12px;
+
+                    button {
+                        width: 110px;
+                        height: 50px;
+                        font-weight: 800;
+
+                        &.cancel-btn {
+                            background-color: $link-color;
+                            color: $txt-color;
+                        }
+
+                        &.remove-btn {
+                            color: $primary-color;
+                            border: 2px solid $gray-color;
+                        }
+                    }
+                }
+
+                .close-modal-btn {
+                    cursor: pointer;
+                    position: absolute;
+                    top: 20px;
+                    right: 20px;
+                }
+
+            }
 
             &.open {
                 height: auto;
@@ -851,6 +913,9 @@
         .resume-forms {
 
             .resume-form {
+                padding-block-end: 0;
+                margin-block-end: 0;
+
                 .resume-title {
                     padding-inline: 0;
 
@@ -867,8 +932,6 @@
                 >* {
                     padding-inline: 0 !important;
                 }
-
-
 
                 .resume-personal {
                     display: flex;
@@ -902,10 +965,9 @@
                     grid-template-columns: 1fr;
                 }
 
-                padding-block-end: 0;
-                margin-block-end: 0;
-
-                &.open {}
+                .remove-modal {
+                    width: 95%;
+                }
             }
         }
 
@@ -980,15 +1042,20 @@
 
                     }
 
-                    .black-screen {
-                        display: block;
-                        width: 100%;
-                        height: 100vh;
-                        background-color: rgba(0, 0, 0, 0.493);
-                        position: fixed;
-                        top: 0;
-                        left: 0;
-                        z-index: 50;
+
+                }
+
+                .remove-modal {
+                    padding-inline: 16px !important;
+                    padding-block: 24px !important;
+                    height: 180px;
+
+                    .actions {
+                        justify-content: space-between;
+
+                        button {
+                            width: 45%;
+                        }
                     }
                 }
             }
