--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -19,6 +19,7 @@
 @import 'components/resume-form';
 @import 'components/resume-customize';
 @import 'components/auth-form';
+@import 'components/loader';
 
 // Templates
 @import 'templates/template-no1';
