--- a/src/assets/scss/components/_resume-customize.scss
+++ b/src/assets/scss/components/_resume-customize.scss
@@ -249,6 +249,41 @@
         }
     }
 
+    .resume-customize-skills,
+    .resume-customize-languages {
+
+        .skills-title,
+        .languages-title {
+            font-size: rem(24px);
+            margin-bottom: 12px;
+            margin-top: 36px;
+            font-weight: 800;
+        }
+
+        .options {
+            display: flex;
+            align-items: center;
+            gap: 12px;
+
+            .option {
+                cursor: pointer;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                border: 1px solid $primary-color;
+                width: 30%;
+                height: 40px;
+                font-size: rem(14px);
+
+                &.selected {
+                    background-color: $gray-color;
+                    color: $txt-color;
+                    border: 1px solid $gray-color;
+                }
+            }
+        }
+    }
+
     @include for-narrow-layout {
         padding-inline: 0;
         margin-block-end: 48px;
