--- a/src/assets/scss/components/_resume-form.scss
+++ b/src/assets/scss/components/_resume-form.scss
@@ -2,6 +2,7 @@
     flex-basis: 50%;
     background-color: white;
     padding-inline: 48px;
+    padding-bottom: 24px;
     height: 100vh;
     overflow-y: auto;
 
