--- a/src/assets/scss/templates/_template-no1.scss
+++ b/src/assets/scss/templates/_template-no1.scss
@@ -80,6 +80,7 @@
         .education-info,
         .experience-info,
         .military-info {
+            padding-block: 4px;
 
             .education-list,
             .experience-list {
@@ -137,6 +138,7 @@
         }
 
         .profile-info {
+            padding-block: 4px;
 
             .education-about-txt {
                 padding-block: 8px;
@@ -151,6 +153,7 @@
 
         .skills-info,
         .languages-info {
+            padding-block: 4px;
 
             .skill-list,
             .language-list {
