--- a/src/assets/scss/views/_resume-app.scss
+++ b/src/assets/scss/views/_resume-app.scss
@@ -18,6 +18,8 @@
             aspect-ratio: 1 / 1.414;
             height: 40vw;
             position: relative;
+            font-family: 'Roboto', sans-serif;
+            letter-spacing: .01;
         }
     }
 
