--- a/src/assets/scss/basics/_base.scss
+++ b/src/assets/scss/basics/_base.scss
@@ -11,10 +11,9 @@ html {
 body {
 	line-height: 1;
 	margin: 0;
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Raleway', sans-serif;
 	background-color: $bg-color;
 	color: $primary-color;
-	letter-spacing: 0.01px;
 	overflow-x: hidden;
 
 	&.dragging {
@@ -54,8 +53,8 @@ ul {
 	margin: 0;
 }
 
-input{
-	@include for-mobile-layout{
+input {
+	@include for-mobile-layout {
 		font-size: 16px !important;
 	}
 }
