--- a/src/assets/scss/components/_resume-form.scss
+++ b/src/assets/scss/components/_resume-form.scss
@@ -2,7 +2,6 @@
     flex-basis: 50%;
     background-color: white;
     padding-inline: 48px;
-    padding-bottom: 24px;
     height: 100vh;
     overflow-y: auto;
 
@@ -182,6 +181,8 @@
     }
 
     .resume-forms {
+        margin-bottom: 24px;
+
 
         .resume-form {
             margin-block: 38px;
