add remove for resume

--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -20,6 +20,7 @@
 @import 'components/resume-customize';
 @import 'components/auth-form';
 @import 'components/loader';
+@import 'components/remove-modal';
 
 // Templates
 @import 'templates/template-no1';
