--- a/src/assets/scss/views/_home-page.scss
+++ b/src/assets/scss/views/_home-page.scss
@@ -14,13 +14,23 @@
 			margin: auto;
 			display: flex;
 			align-items: center;
-			justify-content: space-between;
+			// justify-content: center;
 			width: 100%;
 
 			.logo {
+				display: flex;
+				gap: 6px;
+				align-items: center;
+
+				img {
+					height: 4vh;
+				}
+
+				// gap: 6px;
 				.logo-title {
-					font-size: rem(36px);
-					font-weight: 300;
+					font-size: rem(28px);
+					font-weight: 800;
+					color: $primary-color;
 				}
 			}
 
@@ -111,16 +121,6 @@
 			.hero-img {
 				position: relative;
 
-				.rect {
-					position: absolute;
-					top: -40px;
-					left: -40px;
-					width: 80px;
-					height: 80px;
-					background-color: $link-color;
-					opacity: .8;
-				}
-
 				img {
 					width: 100%;
 					height: 70vh;
@@ -169,6 +169,7 @@
 					cursor: pointer;
 					display: flex;
 					align-items: center;
+					position: relative;
 					height: 184px;
 					width: 184px;
 					padding-inline: 24px;
@@ -178,6 +179,20 @@
 						display: flex;
 						gap: 12px;
 						align-items: center;
+
+						.remove {
+							display: none;
+							position: absolute;
+							top: 12px;
+							right: 12px;
+							fill: white;
+
+							@include hover {
+								svg {
+									transform: rotate(10deg);
+								}
+							}
+						}
 
 						.resume-title {
 							font-size: rem(24px);
@@ -198,7 +213,13 @@
 
 					@include hover {
 						box-shadow: none;
-						opacity: .8;
+
+						.resume-info {
+							.remove {
+								display: block;
+							}
+						}
+
 					}
 
 				}
@@ -318,10 +339,22 @@
 							flex-direction: row;
 						}
 					}
+
+					.resume-preview {
+						justify-content: space-between;
+
+						.resume-info {
+							.remove {
+								display: block;
+								top: 50%;
+								transform: translateY(-50%);
+								right: 24px;
+							}
+						}
+					}
 				}
 			}
 		}
 	}
-
 
 }
