--- a/src/assets/scss/basics/_base.scss
+++ b/src/assets/scss/basics/_base.scss
@@ -62,7 +62,7 @@ input {
 button {
 	border: none;
 	cursor: pointer;
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Raleway', sans-serif;
 	background-color: transparent;
 }
 
