--- a/src/assets/scss/views/_resume-app.scss
+++ b/src/assets/scss/views/_resume-app.scss
@@ -19,7 +19,10 @@
             height: 40vw;
             position: relative;
             font-family: 'Roboto', sans-serif;
-            letter-spacing: .01;
+
+            * {
+                letter-spacing: .01px;
+            }
         }
     }
 
