--- a/src/assets/scss/views/_home-page.scss
+++ b/src/assets/scss/views/_home-page.scss
@@ -174,6 +174,7 @@
 					width: 184px;
 					padding-inline: 24px;
 					text-align: center;
+					aspect-ratio: 1 /1;
 
 					.resume-info {
 						display: flex;
