--- a/src/assets/scss/templates/_template-no1.scss
+++ b/src/assets/scss/templates/_template-no1.scss
@@ -61,18 +61,17 @@
         .img-container {
             position: relative;
             height: 125px;
-            aspect-ratio: 1 / 1;
             overflow: hidden;
             border-radius: 5em;
             display: flex;
+            aspect-ratio: 1 / 1;
             justify-content: center;
-            
+
             .img {
-                height: 125px;
+                width: 100%;
+                height: 100%;
             }
         }
-
-
 
     }
 
